[project]
name = "rent_comparator"
version = "0.1.0"
description = "Compares rent prices of appartament by aggregating information form different sources"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
